BUG#38374 Service interface throwing assertions in mysql-6.0-rpl tree after patch

Code throws assertion because the mysys_var settings were changed in the 
ViewBaseObjectsIterator::create() method. The mysys_var must be set to
NULL so that store_globals() can correctly reset it.